Add integration tests for Appointment